--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -166,10 +166,15 @@
     subtitle: "PhD Student | PSC",
     modifier: "Kataria",
     type: "Graduate Student",
-    bio: "",
-    email: "raghav09@aggiemail.usu.edu",
+    bio: "Raghav is a PhD scholar from India. He worked as a Senior Research Fellow at Punjab Agricultural University (PAU, India)
+          before joining the KAABiL. With a research focus on bioinformatics, he is currently working on pathogen-host protein-protein interactions
+          using computational tools and various molecular biology techniques.",
+    email: "raghav.kataria@.usu.edu",
     img: "/image/raw/people/raghav/raghav.jpg",
-    social: []
+    social: [
+      {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
+      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-rk-14458211b"}
+    ]
   }
 %}
 
