--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -169,7 +169,7 @@
     bio: "Raghav is a PhD scholar from India. He worked as a Senior Research Fellow at Punjab Agricultural University (PAU, India)
           before joining the KAABiL. With a research focus on bioinformatics, he is currently working on pathogen-host protein-protein interactions
           using computational tools and various molecular biology techniques.",
-    email: "raghav.kataria@.usu.edu",
+    email: "raghav.kataria@usu.edu",
     img: "/image/raw/people/raghav/raghav.jpg",
     social: [
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
