--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -15,23 +15,28 @@
 {% endmacro %}
 
 {% macro personCardModal(person) %}
-  <div class="kbl-person-card-container">
+  <div class="kbl-person-card-container mb-3">
     <div class="kbl-person-card select text-left" data-toggle="modal" data-target="#{{ person.modifier }}Modal">
-      <figure>
+      <figure class="mb-0">
         <img class="w-100 mb-2" style="height: 250px;" src="{{ RaikouServer }}{{ person.img }}">
         <figcaption class="pb-2 text-left px-3">
           <div class="title-wrapper">
             <div class="card-title mb-0">{{ person.name }}</div>
             <div class="card-subtitle">{{ person.subtitle }}</div>
           </div>
-          <span class="kbl-social-wrapper">
-            {% for media in person.social %}
-              {{ socialSet(media) }}
-            {% endfor %}
-          </span>
         </figcaption>
       </figure>
     </div>
+
+    {% if person.social.length %}
+      <div class="social-card mt-2 pt-1">
+        <span class="kbl-social-wrapper text-left">
+          {% for media in person.social %}
+            {{ socialSet(media) }}
+          {% endfor %}
+        </span>
+      </div>
+    {% endif %}
   </div>
 
   <div class="modal fade" id="{{ person.modifier }}Modal" tabindex="-1">
