Cleaned up events selectors

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -37,6 +37,7 @@ $color-secondary: #3b4961;
   --color-border-dark-gray: #9c9c9c;
 
   --color-bg-gray: #f2f2f2;
+  --color-bg-soft-gray: #ddd;
 
   --color-bg-main: #f7f7f7;
 
