--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -5,3 +5,4 @@
 @import './components/conf-card';
 @import './components/calendar';
 @import './components/event';
+@import './components/glass-card';
