--- a/src/views/components/event-link.njk
+++ b/src/views/components/event-link.njk
@@ -1,22 +1,31 @@
 {% macro eventLink(event) %}
-  <article class="container-fluid kbl-event-link my-2">
+  <article class="container-fluid kbl-event-link my-2 px-0">
     <a href="{{ event.link }}">
       <div class="img-container">
         <img class="img-fluid" src="{{ RaikouServer }}{{ event.img }}">
       </div>
-      <h4 class="kbl-heading">
-        {{ event.title }}
-      </h4>
     </a>
-    <div class="row">
-      <section class="col-auto kbl-text soft">
-        <i class="fas fa-map-marker-alt mr-2"></i>
-        <span class="text">{{ event.location }}</span>
+
+    <section class="infotainer px-3 pb-2 pt-1 mt-2">
+      <section class="row">
+        <div class="col">
+          <div class="row">
+            <section class="col-auto kbl-heading">
+              <h4 class="col-auto">{{ event.title }}</h4>
+            </section>
+          </div>
+          <div class="row">
+            <section class="col-auto kbl-text soft">
+              <i class="fas fa-map-marker-alt mr-2"></i>
+              <span class="text">{{ event.location }}</span>
+            </section>
+            <section class="col-auto kbl-text soft">
+              <i class="far fa-calendar mr-2"></i>
+              <span class="text">{{ event.date }}</span>
+            </section>
+          </div>
+        </div>
       </section>
-      <section class="col-auto kbl-text soft">
-        <i class="far fa-calendar mr-2"></i>
-        <span class="text">{{ event.date }}</span>
-      </section>
-    </div>
+    </section>
   </article>
 {% endmacro %}
