--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -64,7 +64,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-6 col-sm-8">
-                      <aside class="stage-halfbol_content">
+                      <aside class="stage-halfbol_content glass-card">
                           <h2 class="stage-title font-md lil-line">KAABiL group is one of Utah’s</h2>
                           <p class="stage-halfbol_text">leading bioinformatics labs. To date, Dr. Kaundal has trained more than 10 graduate students, 10 undergrad
                           students, 1 postdoctoral fellow, and 3 full-time bioinformatics staff members in his career research program.</p>
