--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -35,14 +35,18 @@
 
 <article class="container {{ activeCheck('2017-2019', routerYearRange) }}">
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2019</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2019</h4>
+    </div>
     {% for article in pub2019 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2018</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2018</h4>
+    </div>
     {% for article in pub2018 %}
       {{ publication(article) }}
     {% endfor %}
@@ -51,14 +55,18 @@
 
 <article class="container {{ activeCheck('2014-2016', routerYearRange) }}">
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2016</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2016</h4>
+    </div>
     {% for article in pub2016 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2014</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2014</h4>
+    </div>
     {% for article in pub2014 %}
       {{ publication(article) }}
     {% endfor %}
@@ -67,21 +75,27 @@
 
 <article class="container {{ activeCheck('2011-2013', routerYearRange) }}">
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2013</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2013</h4>
+    </div>
     {% for article in pub2013 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2012</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2012</h4>
+    </div>
     {% for article in pub2012 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2011</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2011</h4>
+    </div>
     {% for article in pub2011 %}
       {{ publication(article) }}
     {% endfor %}
@@ -90,14 +104,18 @@
 
 <article class="container {{ activeCheck('2008-2010', routerYearRange) }}">
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2010</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2010</h4>
+    </div>
     {% for article in pub2010 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2009</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2009</h4>
+    </div>
     {% for article in pub2009 %}
       {{ publication(article) }}
     {% endfor %}
@@ -106,21 +124,27 @@
 
 <article class="container {{ activeCheck('2005-2007', routerYearRange) }}">
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2007</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2007</h4>
+    </div>
     {% for article in pub2007 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2006</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2006</h4>
+    </div>
     {% for article in pub2006 %}
       {{ publication(article) }}
     {% endfor %}
   </section>
 
   <section class="py-4">
-    <h3 class="kbl-heading text-center">2005</h3>
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2005</h4>
+    </div>
     {% for article in pub2005 %}
       {{ publication(article) }}
     {% endfor %}
