--- a/src/scss/kbl/_button.scss
+++ b/src/scss/kbl/_button.scss
@@ -77,3 +77,17 @@
     box-shadow: none!important;
   }
 }
+
+.kbl-close {
+  padding: 0!important;
+  font-size: 200%;
+  line-height: 100%!important;
+  transition: var(--time-mid);
+  background: transparent;
+  border: none;
+  color: var(--color-text-soft);
+
+  &:hover {
+    color: var(--color-primary);
+  }
+}
