Add deepNEC, reduce image size

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -90,9 +90,9 @@
 %}
 
 {% set necMiner = {
-    img: "/assets/img/tools/legumeSSRdb.png",
-    title: "NECminer",
-    link: "http://bioinfo.usu.edu/NECminer/"
+    img: "/assets/kbl-img/deepnec.png",
+    title: "deepNEC",
+    link: "http://bioinfo.usu.edu/deepNEC/"
   }
 %}
 
