--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -4,7 +4,7 @@
             <div class="seq-screen">
                 <ul class="seq-canvas">
                     <li class="seq-step1" id="step1"
-                        style="background:url(assets/img/slider/dna-4068826.jpg); background-color: black;  background-size:cover">
+                        style="background:url(assets/img/slider/dna_trim.jpg); background-color: black;  background-size:cover">
                         <div class="bg-blend"></div>
                         <div class="seq-content">
 
@@ -20,7 +20,7 @@
                         </div>
                     </li>
                     <li class="seq-step1" id="step2"
-                        style="background:url(assets/img/USU_ag.jpg); background-position-y: -400px; background-color: black;  background-size:cover">
+                        style="background:url(assets/img/usu_ag_trim.jpg); background-position-y: -400px; background-color: black;  background-size:cover">
 
                         <div class="bg-blend"></div>
                         <div class="seq-content">
@@ -72,7 +72,7 @@
                         </div>
                     </li>
                     <li class="seq-step1" id="step4"
-                        style="background:url(assets/img/NGS_website-v2.png); background-size:cover; background-color: black">
+                        style="background:url(assets/img/ngs2.png); background-size:cover; background-color: black">
 
                         <div class="bg-blend"></div>
                         <div class="seq-content">
