--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -54,7 +54,7 @@ var toastList = toastElList.map(function (toastEl) {
     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
     e.src='//www.google-analytics.com/analytics.js';
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    ga('create','UA-119048537-8','auto');ga('send','pageview');
 
     var tabs = $('.tabs');
 var selector = $('.tabs').find('a').length;
