--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -6,3 +6,4 @@
 @import './components/calendar';
 @import './components/event';
 @import './components/glass-card';
+@import './components/tool-card';
