--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -7,7 +7,7 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Tools") }}
 
-  <article class="container-fluid kbl-top">
+  <article class="container-fluid kbl-top mb-4">
     <div class="row justify-content-center pt-4">
       <div class="col-auto">
         <h1><ion-icon name="cube-outline" class="kbl-header-icon"></ion-icon></h1>
