--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -34,6 +34,7 @@
   options: [
     {name: "Host-Pathogen Prediction", link: "/tools#hpi"},
     {name: "Cellular Localization Prediction", link: "/tools#cellularloc"},
+    {name: "Metagenomics", link: "/tools#metagenomics"},
     {name: "Databases", link: "/tools#db"},
     {name: "Bioenergy", link: "/tools#bionrg"},
     {name: "Miscellaneous", link: "/tools#misc"}
