Fix side scroll bug on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,9 @@ ul, ol {
 
 img {
   max-width: 100%; }
-
+html {
+  overflow-x: hidden;
+}
 body {
   color: var(--color-text-main);
   overflow-x: hidden;
