Mobile navbar beginning

--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -7,3 +7,4 @@
 @import './components/event';
 @import './components/glass-card';
 @import './components/tool-card';
+@import './components/mobile-navbar';
