--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -1,3 +1,5 @@
+
+
 <footer class="w-100 py-5 mt-5">
   <div class="container">
     <div class="row">
@@ -110,7 +112,7 @@
   </div>
 </footer>
 
-<section class="container my-3">
+<section class="container py-3 bottom-section">
   <div class="row">
     <div class="col-12 col-sm-6 col-md-6 footer-bottom-text text-center text-sm-left">
       <span class="kbl-text">Copyright 2020 - </span><a href="/" class="kbl-link">KAABiL Lab</a>
@@ -120,3 +122,5 @@
     </div>
   </div>
 </section>
+
+{% include "universal/_mobile-navbar.njk" %}
