--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -6,7 +6,7 @@
 
 <!-- {{ navbarSmall(activePage, activeSubpage) }} -->
 
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-md bs4 d-none d-xl-block"
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-md bs4 d-none d-lg-block"
   style="background: #fff!important;">
   <article class="container-fluid px-3">
     <section class="row px-5 w-100 mb-1">
