--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -144,8 +144,9 @@
         </div>
       </div>
     </div>
-
-    {% include "./paper.njk" %}
+    <div class="d-none d-md-block">
+      {% include "./paper.njk" %}
+    </div>
     {% include "./the-team.njk" %}
 
     {% include "universal/_footer.njk" %}
