--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -121,7 +121,7 @@
               <div class="kbl-text soft award-desc">
                 <a class="kbl-link" href="https://go.okstate.edu/">OSU</a>
                 President’s Cup for creative interdisciplinarity on the project “<b>EDNA</b>:
-                Powerful New Technology for <b>E</b>lectronic <b>E</b>iagnostic <b>E</b>ucleic acid <b>E</b>nalysis”
+                Powerful New Technology for <b>E</b>lectronic <b>D</b>iagnostic <b>N</b>ucleic acid <b>A</b>nalysis”
               </div>
             </div>
           </section>
