Mobile navbar sort of works

--- a/src/scss/components/_mobile-navbar.scss
+++ b/src/scss/components/_mobile-navbar.scss
@@ -24,7 +24,7 @@
   color: var(--color-primary-very-light);
 
   &:focus {
-    color: var(--color-primary);
+    color: var(--color-primary-light);
   }
 
   &.active {
