--- a/src/views/universal/_mobile-navbar.njk
+++ b/src/views/universal/_mobile-navbar.njk
@@ -1,6 +1,6 @@
 {% from 'universal/navbar-active-route.njk' import mobileActiveRoute %}
 
-<nav class="mobile-nav-wrapper px-3 py-2 d-lg-none mb-2">
+<nav class="mobile-nav-wrapper px-3 py-2 d-lg-none">
   <article class="mobile-nav">
     <div class="row h-100 pt-2 px-3">
       <section class="col text-center my-auto">
