Fix color issue on mobile

--- a/src/scss/components/_mobile-navbar.scss
+++ b/src/scss/components/_mobile-navbar.scss
@@ -28,6 +28,10 @@
     color: var(--color-primary-light);
   }
 
+  &:active {
+    color: var(--color-primary-light);
+  }
+
   &.active {
     color: var(--color-primary);
   }
